5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1596_1015.log
== TEST (2019-04-02 02:32:56) 
-- CODE:
(int(input))= 2

(int(input))= 5

(int(input))= 1

min(1, 2, 5)
 


-- ERROR:
File "XXXX", line 1
    (int(input))= 2
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:33:02) 
-- CODE:
(int(input))= 2

(int(input))= 5

(int(input))= 1

min(1, 2, 5)
 


-- EXECUTION TIME:
0.173977
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 1
    (int(input))= 2
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:25:51) 
-- CODE:
(int(input))= 2

(int(input))= 5

(int(input))= 1

min(1, 2, 5)
 


-- ERROR:
File "XXXX", line 1
    (int(input))= 2
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:26:03) 
-- CODE:
(int(input))= 2

(int(input))= 3

(int(input))= 1

min(1, 2, 3)
 


-- ERROR:
File "XXXX", line 1
    (int(input))= 2
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:29:07) 
-- CODE:
(int(input))= 2

(int(input))= 3

(int(input))= 1

min(1, 2, 3)
 


-- ERROR:
File "XXXX", line 1
    (int(input))= 2
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:29:38) 
-- CODE:
(int(input))= 4

(int(input))= 3

(int(input))= 1

min(1, 3, 4)
 


-- ERROR:
File "XXXX", line 1
    (int(input))= 4
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:29:55) 
-- CODE:
(int(input))= 4

(int(input))= 3

(int(input))= 1

min(1 ,3 , 4)
 


-- ERROR:
File "XXXX", line 1
    (int(input))= 4
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:30:51) 
-- CODE:
(int(input))= 4

(int(input))= 3

(int(input))= 1

print(int(min(1, 3, 4)))
 


-- ERROR:
File "XXXX", line 1
    (int(input))= 4
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:31:14) 
-- CODE:
(int(input))= 4

(int(input))= 3

(int(input))= 1

(int(min(1, 3, 4)))
 


-- ERROR:
File "XXXX", line 1
    (int(input))= 4
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:31:43) 
-- CODE:
(int(input))= 4

(int(input))= 3

(int(input))= 1


 


-- ERROR:
File "XXXX", line 1
    (int(input))= 4
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:32:37) 
-- CODE:
(int(input = 3))

(int(input = 2))

(int(input = 1))


 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    (int(input = 3))
TypeError: 'input' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:33:14) 
-- CODE:
(int(input(= 3)))

(int(input = 2))

(int(input = 1))


 


-- ERROR:
File "XXXX", line 1
    (int(input(= 3)))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:59:37) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c))
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))


 


-- EXECUTION TIME:
0.157475
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
